KNL-544 update links + javadoc plugin
git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@80372 66ffb92e-73f9-0310-93c1-f5514f145a0a