@@ -884,19 +884,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>2.7</version>
                 <configuration>
                     <debug>true</debug>
                     <links>
-                        <link> http://java.sun.com/j2se/1.5.0/docs/api </link>
+                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
                         <link> http://java.sun.com/products/servlet/2.3/javadoc/ </link>
                     </links>
                     <breakiterator>true</breakiterator>
                     <verbose>false</verbose>
                     <aggregate>true</aggregate>
                     <maxmemory>512m</maxmemory>
-                    <!--<additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m
-                        -J-XX:NewSize=64m</additionalJOption>-->
                 </configuration>
             </plugin>
             <plugin>
